styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap');

/* Global styles for html and body */
html, body {
    margin: 0;
    padding: 0;

    background: #111;
    color: #fff;
}

body, code {
    font-family: 'Inconsolata', monospace;
    line-height: 1.2em;
}

* {
    box-sizing: border-box;
}

/* List styling */
ol, ul {
    list-style-position: inside;
    padding: 0;
}

ul {
    list-style-type: none;
}

li {
    margin-top: .6rem;
}

/* Link styling */
a {
    color: #0f0;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

pre {
    padding: .5em;
    border-radius: .3em;
    background: #222;
    white-space: pre-wrap;
}

/* My hope is that this code is so awful I am never allowed to write css again */
code {
    color: #0f0;
    background: #222;
    padding: .1rem;
    border-radius: 5px;
}

pre code {
    color: #fff;
    padding: 0;
    border-radius: 0;
}

